@@ -15,6 +15,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -23,64 +24,45 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final ProductRecommendationRepository productRecommendationRepository;
+    private final ProductRecommendationRepository recommendationRepository;
     private final AiService aiService;
 
-    private final String uploadPath = "C:/sdp_uploads/";
+    private final String uploadPath = "C:/uploads/";
 
+    // 1. 전체 조회
     @Transactional(readOnly = true)
     public List<ProductDto> getAllProducts() {
-        return productRepository.findAll().stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        return productRepository.findAll().stream().map(ProductDto::from).toList();
     }
 
-    // 1. 제품 생성 메서드 (Category 추가됨)
+    @Transactional(readOnly = true)
+    public List<ProductDto> searchProducts(String keyword) {
+        // Repository에 findByNameContainingIgnoreCase 메서드가 있어야 함 (이미 있음)
+        return productRepository.findByNameContainingIgnoreCase(keyword).stream()
+                .map(ProductDto::from)
+                .toList();
+    }
+
+    // 2. 제품 생성
     @Transactional
     public ProductDto createProduct(ProductDto productDto, MultipartFile imageFile) throws IOException {
         String savedFileName = "";
-        if (imageFile != null && !imageFile.isEmpty()) {
-            savedFileName = saveImage(imageFile);
-        }
+        if (imageFile != null && !imageFile.isEmpty()) savedFileName = saveImage(imageFile);
 
         Product product = new Product();
         product.setName(productDto.getName());
         product.setDescription(productDto.getDescription());
         product.setPrice(productDto.getPrice());
         product.setImageFileName(savedFileName);
-        // ⭐ 추가: DTO에서 받은 카테고리를 엔티티에 저장
         product.setCategory(productDto.getCategory());
+        product.setUsage(productDto.getUsage());
 
         Product savedProduct = productRepository.save(product);
-
-        // AI 추천 로직 (기존과 동일)
-        try {
-            List<String> allProductNames = productRepository.findAll().stream()
-                    .map(Product::getName)
-                    .filter(name -> !name.equals(savedProduct.getName()))
-                    .collect(Collectors.toList());
-
-            if (!allProductNames.isEmpty()) {
-                String aiResult = aiService.getRecommendation(
-                        savedProduct.getName(),
-                        savedProduct.getDescription(),
-                        allProductNames
-                );
-                String[] parts = aiResult.split(":");
-                String targetName = parts.length > 0 ? parts[0].trim() : "추천 아이템";
-                String reason = parts.length > 1 ? parts[1].trim() : "이유 없음";
-
-                ProductRecommendation recommendation = new ProductRecommendation(savedProduct, targetName, reason);
-                productRecommendationRepository.save(recommendation);
-            }
-        } catch (Exception e) {
-            System.out.println("⚠️ AI 추천 실패: " + e.getMessage());
-        }
-
+        generateAndSaveRecommendations(savedProduct);
         return convertToDto(savedProduct);
     }
 
-    // 2. 제품 수정 메서드 (Category 추가됨)
+    // 3. 제품 수정
     @Transactional
     public ProductDto updateProduct(Long id, ProductDto productDto, MultipartFile imageFile) throws IOException {
         Product product = productRepository.findById(id)
@@ -89,102 +71,69 @@ public class ProductService {
         product.setName(productDto.getName());
         product.setDescription(productDto.getDescription());
         product.setPrice(productDto.getPrice());
-        // ⭐ 추가: 수정한 카테고리 정보 반영
         product.setCategory(productDto.getCategory());
+        product.setUsage(productDto.getUsage());
 
-        if (imageFile != null && !imageFile.isEmpty()) {
-            product.setImageFileName(saveImage(imageFile));
-        }
+        if (imageFile != null && !imageFile.isEmpty()) product.setImageFileName(saveImage(imageFile));
 
         Product savedProduct = productRepository.save(product);
 
-        // AI 추천 갱신 로직 (기존과 동일)
-        try {
-            productRecommendationRepository.deleteByProductId(savedProduct.getId());
-            List<String> allProductNames = productRepository.findAll().stream()
-                    .map(Product::getName)
-                    .filter(name -> !name.equals(savedProduct.getName()))
-                    .collect(Collectors.toList());
-
-            if (!allProductNames.isEmpty()) {
-                String aiResult = aiService.getRecommendation(
-                        savedProduct.getName(),
-                        savedProduct.getDescription(),
-                        allProductNames
-                );
-                String[] parts = aiResult.split(":");
-                String targetName = parts.length > 0 ? parts[0].trim() : "추천 아이템";
-                String reason = parts.length > 1 ? parts[1].trim() : aiResult;
-
-                ProductRecommendation recommendation = new ProductRecommendation(savedProduct, targetName, reason);
-                productRecommendationRepository.save(recommendation);
-            }
-        } catch (Exception e) {
-            System.out.println("⚠️ AI 추천 갱신 실패: " + e.getMessage());
-        }
+        recommendationRepository.deleteByProductId(savedProduct.getId());
+        recommendationRepository.flush();
+        generateAndSaveRecommendations(savedProduct);
 
         return convertToDto(savedProduct);
+    }
+
+    private void generateAndSaveRecommendations(Product currentProduct) {
+        List<Product> candidates = productRepository.findAll().stream()
+                .filter(p -> p.getUsage() != null && p.getUsage().equals(currentProduct.getUsage()))
+                .filter(p -> !p.getId().equals(currentProduct.getId()))
+                .toList();
+
+        if (candidates.isEmpty()) return;
+
+        List<Map<String, Object>> aiResults = aiService.getRecommendationsFromPython(currentProduct, candidates);
+
+        for (Map<String, Object> res : aiResults) {
+            String reason = (String) res.get("reason");
+            String targetName = (String) res.get("targetProductName");
+            Long targetId = ((Number) res.get("targetProductId")).longValue();
+
+            ProductRecommendation rec = new ProductRecommendation(currentProduct, targetName, targetId, reason);
+            recommendationRepository.save(rec);
+        }
     }
 
     private String saveImage(MultipartFile imageFile) throws IOException {
         File uploadDir = new File(uploadPath);
         if (!uploadDir.exists()) uploadDir.mkdirs();
         String uuid = UUID.randomUUID().toString();
-        String originalName = imageFile.getOriginalFilename();
-        String extension = originalName.substring(originalName.lastIndexOf("."));
-        String savedName = uuid + extension;
+        String ext = imageFile.getOriginalFilename().substring(imageFile.getOriginalFilename().lastIndexOf("."));
+        String savedName = uuid + ext;
         imageFile.transferTo(new File(uploadPath, savedName));
         return savedName;
     }
 
     @Transactional
     public void deleteProduct(Long id) {
+        recommendationRepository.deleteByProductId(id);
         productRepository.deleteById(id);
     }
 
-    // 3. DTO 변환 메서드 (Category 추가됨)
-    private ProductDto convertToDto(Product product) {
-        ProductDto dto = new ProductDto();
-        dto.setId(product.getId());
-        dto.setName(product.getName());
-        dto.setDescription(product.getDescription());
-        dto.setImageFileName(product.getImageFileName());
-        dto.setPrice(product.getPrice());
-        // ⭐ 추가: DB에서 가져온 카테고리를 DTO에 담아서 프론트로 전달
-        dto.setCategory(product.getCategory());
-        return dto;
-    }
+    private ProductDto convertToDto(Product product) { return ProductDto.from(product); }
 
-    // 4. 상세 조회 (ProductResponseDto에도 category가 있다면 추가 권장)
     @Transactional(readOnly = true)
     public ProductResponseDto getProductDetail(Long id) {
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 상품이 없습니다. id=" + id));
 
-        List<ProductRecommendation> recommendations = productRecommendationRepository.findByProductId(id);
-
-        List<ProductResponseDto.AiRecommendation> recDtos = recommendations.stream()
-                .map(rec -> {
-                    Long targetId = productRepository.findByName(rec.getTargetProductName())
-                            .map(Product::getId)
-                            .orElse(null);
-
-                    return ProductResponseDto.AiRecommendation.builder()
-                            .targetProductName(rec.getTargetProductName())
-                            .reason(rec.getReason())
-                            .targetProductId(targetId)
-                            .build();
-                })
+        ProductResponseDto dto = ProductResponseDto.from(product);
+        List<ProductRecommendation> recs = recommendationRepository.findByProductId(id);
+        List<ProductResponseDto.AiRecommendation> recDtos = recs.stream()
+                .map(r -> new ProductResponseDto.AiRecommendation(r.getReason(), r.getTargetProductName(), r.getTargetProductId()))
                 .collect(Collectors.toList());
-
-        return ProductResponseDto.builder()
-                .id(product.getId())
-                .name(product.getName())
-                .price(product.getPrice())
-                .description(product.getDescription())
-                .imageUrl(product.getImageFileName())
-                // .category(product.getCategory()) // ⭐ ProductResponseDto에 필드가 있다면 주석 해제
-                .recommendations(recDtos)
-                .build();
+        dto.setRecommendations(recDtos);
+        return dto;
     }
 }
